# object-detection

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/router/: ai_service.py  ui_service.py
templates/: index.html
